  - Implemented file locking support for mounting disk
    image files so that you cannot mount the same disk
    image files in read/write mode at the same time as
    this can cause possible disk corruptions. A config
    option "locking disk image mount" is added to the
    [dosbox] section which when set to false (or if the
    user mounts the image files read-only) will bypass
    the locking of image files. (Wengier)
  - You can now use a single mapper file for both SDL1
    and SDL2 versions of DOSBox-X! The new mapper file
    will be divided to sections [SDL1] and [SDL2] for
    both versions. The mapper file can be specified
    with the mapperfile config option, or you can set
    the mapperfile_sdl1 and mapperfile_sdl2 config
    options to override mapperfile option. (Wengier)
  - The menu functions "Load mapper file", "Quick edit
    mode", "Stop clipboard pasting" and "Display state
    information" have been added to the key mapper so
    that you can now define your own shortcut keys to
    activate these functions. (Wengier)
  - Added ttf.fontbold, ttf.fontital, and ttf.fontboit
    config options so that you can specify actual bold
    italic, and bold-italic TrueType fonts for use with
    the TTF output that will render the bold, italic,
    and bold-italic text styles using the actual TTF
    fonts (e.g. consolab, consolai, consolaz instead of
    consola) instead of making the original TTF font
    bold, italic, bold-italic automatically. (Wengier)
  - DOSBox-X now supports the use of arrow keys (left,
    right, up, down, home, end) to select and copy text
    to the host clipboard in addition to a mouse button
    (subject to the specified key modifier, or use the
    QuickEdit function). The arrow keys will move the
    selections; press Home key to start the actual text
    selection and End key to end text selection and to
    copy to the clipboard; press ESC key to cancel text
    selection. Set config option "clip_mouse_button" to